--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "php": "^7.1",
-        "doctrine/common": ">=2.2.1,<=2.10-dev",
+        "doctrine/common": ">=2.2.1,<=2.10",
         "doctrine/dbal": ">=2.2.1,<=2.9-dev",
         "doctrine/orm": ">=2.2.1,<3.0-dev"
     },
