--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "require": {
         "php": "^7.1",
         "doctrine/common": ">=2.2.1,<=2.10",
-        "doctrine/dbal": ">=2.2.1,<=2.9-dev",
+        "doctrine/dbal": ">=2.2.1,<=2.9.2",
         "doctrine/orm": ">=2.2.1,<3.0-dev"
     },
     "require-dev": {
